--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,41 @@
-div {
-    text-align: center;
-    background-color: rgb(255, 217, 242);
+* {
     font-family:'Times New Roman', Times, serif;
+}
+div#bienvenida {
+    text-align: center;
+    padding: 25px;
+    background-color: rgb(255, 115, 180);
+    color: black;
+}
+nav.menu {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(151, 0, 83);
+}
+nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+nav li{
+    padding: 10px;
+    list-style: none;
+}
+nav a {
+    color:beige;
+    text-decoration: none;
+    font-size: x-large;
+}
+div#imagen1{
+    color:black; 
+    font-size: x-large;
+    background-color: bisque;
+    padding:30px;   
+}
+div#video1 {
+    color:black; 
+    font-size: x-large;
+    background-color: bisque;
+    padding:30px;
 }
