--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 div#bienvenida {
     text-align: center;
     padding: 25px;
-    background-color: rgb(255, 115, 180);
+    background-color: bisque;
     color: black;
 }
 nav.menu {
