--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
     font-family:'Times New Roman', Times, serif;
-    background-color: bisque
 }
 
 div#bienvenida {
@@ -30,7 +29,7 @@ nav a {
     text-decoration: none;
     font-size: x-large;
 }
-div#imagen1{
+div#poema{
     color:black; 
     font-size: x-large;
     background-color: bisque;
